--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -1,13 +1,17 @@
 [tool.poetry]
-name = "fastapi"
+name = "app"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
+fastapi = "^0.109.2"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^24.2.0"
 
 [build-system]
 requires = ["poetry-core"]
