--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.109.2"
+uvicorn = "^0.27.1"
 
 
 [tool.poetry.group.dev.dependencies]
