--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.109.2"
 uvicorn = "^0.27.1"
+together = "^0.2.11"
+python-dotenv = "^1.0.1"
+llama-index-core = "^0.10.12"
+llama-index-llms-together = "^0.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
