--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
-version: '3'
+version: "3"
 services:
   api:
-    build: ./api
+    build: ./ml-api
     ports:
       - 8000:8000
     volumes:
-      - ./api:/app
+      - ./ml-api:/ml-api
