Update FastAPI server command in Dockerfile

--- a/ml-api/Dockerfile
+++ b/ml-api/Dockerfile
@@ -27,5 +27,5 @@ EXPOSE 8000
 
 # Start the FastAPI server
 # CMD ["poetry", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--log-level", "debug"]
+CMD ["uvicorn", "ml_api.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload", "--log-level", "debug"]
 
