--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.1"
 llama-index-core = "^0.10.12"
 llama-index-llms-together = "^0.1.3"
 mysqlclient = "^2.1.1"
+sqlmodel = "^0.0.16"
 
 
 [tool.poetry.group.dev.dependencies]
