Update README and .env.example files for ml-api

--- a/ml-api/.env.example
+++ b/ml-api/.env.example
@@ -1,1 +1,5 @@
 TOGETHER_API_KEY="my-very-secret-api-key"
+MYSQL_HOST="<scope database url>"
+MYSQL_DB="<scope database name>"
+MYSQL_USER="<scope database user>"
+MYSQL_PASSWORD="<scope database password>"
