--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -15,10 +15,15 @@ llama-index-core = "^0.10.12"
 llama-index-llms-together = "^0.1.3"
 mysqlclient = "^2.1.1"
 sqlmodel = "^0.0.16"
+llama-index-program-openai = "^0.1.4"
 
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
+
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.1.1"
 
 [build-system]
 requires = ["poetry-core"]
