--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -13,7 +13,7 @@ together = "^0.2.11"
 python-dotenv = "^1.0.1"
 llama-index-core = "^0.10.12"
 llama-index-llms-together = "^0.1.3"
-mysqlclient = "^2.1.1"
+# mysqlclient = "^2.1.1"
 sqlmodel = "^0.0.16"
 llama-index-program-openai = "^0.1.4"
 
