Update GitLab synchronization workflow to include fetching full history during code checkout

--- a/.github/workflows/gitlab_sync.yml
+++ b/.github/workflows/gitlab_sync.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set up GitLab Remote URL
         run: echo "GITLAB_FULL_REPO=https://oauth2:${{ secrets.GITLAB_TOKEN }}@${{ secrets.GITLAB_REPO }}" >> $GITHUB_ENV
