--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -1,29 +1,33 @@
 [tool.poetry]
 name = "ml-api"
 version = "0.1.0"
-description = ""
+description = "API For the ML related features in SCOPE. See README.md for more information."
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-fastapi = "^0.109.2"
-uvicorn = "^0.27.1"
-together = "^0.2.11"
-python-dotenv = "^1.0.1"
-llama-index-core = "^0.10.12"
-llama-index-llms-together = "^0.1.3"
-mysqlclient = "^2.1.1"
-sqlmodel = "^0.0.16"
-llama-index-program-openai = "^0.1.4"
+python = ">=3.11,<3.13"
+fastapi = ">=0.109.2"
+uvicorn = ">=0.27.1"
+python-dotenv = ">=1.0.1"
+pydantic-settings = ">=2.5.2"
+llama-index-core = ">=0.10.12"
+llama-index-llms-together = ">=0.1.3"
+llama-index-program-openai = ">=0.1.4"
+llama-index-llms-openai-like = "^0.2.0"
+llama-index-embeddings-text-embeddings-inference = "^0.2.0"
+llama-index-vector-stores-qdrant = "^0.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.2.0"
+black = ">=24.2.0"
 
+[tool.poetry.group.scraper.dependencies]
+dask = "^2024.9.0"
+beautifulsoup4 = "^4.12.3"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^8.1.1"
+pytest = ">=8.1.1"
 
 [build-system]
 requires = ["poetry-core"]
