--- a/ml-api/pyproject.toml
+++ b/ml-api/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "API For the ML related features in SCOPE. See README.md for more information."
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+# packages = [{ include = "ml_api", from = "src" }]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
