--- a/gef-portal-scraper/pyproject.toml
+++ b/gef-portal-scraper/pyproject.toml
@@ -7,10 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-dask = "^2024.9.1"
+dask = {extras = ["distributed"], version = "^2024.9.1"}
 beautifulsoup4 = "^4.12.3"
 selenium = "^4.25.0"
 sqlmodel = "^0.0.22"
+requests = "^2.32.3"
+bokeh = "^3.6.0"
 
 
 [build-system]
