--- a/gef-portal-scraper/pyproject.toml
+++ b/gef-portal-scraper/pyproject.toml
@@ -13,6 +13,11 @@ selenium = "^4.25.0"
 sqlmodel = "^0.0.22"
 requests = "^2.32.3"
 bokeh = "^3.6.0"
+aiohttp = "^3.10.10"
+ujson = "^5.10.0"
+backoff = "^2.2.1"
+aiolimiter = "^1.1.0"
+tqdm = "^4.66.5"
 
 
 [build-system]
