--- a/gef-portal-scraper/pyproject.toml
+++ b/gef-portal-scraper/pyproject.toml
@@ -9,15 +9,14 @@ readme = "README.md"
 python = "^3.11"
 dask = { extras = ["distributed"], version = "^2024.9.1" }
 beautifulsoup4 = "^4.12.3"
-selenium = "^4.25.0"
 sqlmodel = "^0.0.22"
 requests = "^2.32.3"
 bokeh = "^3.6.0"
 aiohttp = "^3.10.10"
-ujson = "^5.10.0"
 backoff = "^2.2.1"
-aiolimiter = "^1.1.0"
 tqdm = "^4.66.5"
+pydantic-settings = "^2.5.2"
+aiolimiter = "^1.1.0"
 
 
 [build-system]
