--- a/deployment/debian.yml
+++ b/deployment/debian.yml
@@ -21,6 +21,14 @@ spec:
       securityContext:
         runAsUser: 237827
         runAsGroup: 50036
+  initContainers:
+    - name: install-tools
+      image: debian:bookworm
+      command: ["/bin/sh", "-c"]
+      args:
+        - apt-get update &&
+          apt-get install -y nano curl &&
+          apt-get clean
   volumes:
     - name: scopenfs
       nfs:
