--- a/deployment/vllm-config.yml
+++ b/deployment/vllm-config.yml
@@ -1,25 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: llama-3-1b
+  name: vllm
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: llama-3-1b
+      app: vllm
   template:
     metadata:
       labels:
-        app: llama-3-1b
+        app: vllm
     spec:
       containers:
-        - name: llama-3-1b
+        - name: vllm
           image: vllm/vllm-openai:latest
           imagePullPolicy: IfNotPresent
           command: ["/bin/sh", "-c"]
           args:
             [
-              "vllm serve meta-llama/Llama-3.2-1B-Instruct --trust-remote-code --enable-chunked-prefill --max_num_batched_tokens 1024",
+              "vllm serve mistralai/Mistral-7B-Instruct-v0.3 --trust-remote-code --enable-chunked-prefill --max_num_batched_tokens 1024",
             ]
           ports:
             - containerPort: 8000
