--- a/deployment/vllm-config.yml
+++ b/deployment/vllm-config.yml
@@ -62,10 +62,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: llama-3-1b-service
+  name: vllm-service
 spec:
   selector:
-    app: llama-3-1b
+    app: vllm
   ports:
     - protocol: TCP
       port: 8000
