--- a/deployment/alpine.yml
+++ b/deployment/alpine.yml
@@ -12,9 +12,8 @@ spec:
         - name: scopenfs
           mountPath: /scope # Any path you want to mount to.
       command: ["/bin/sh"]
-      args: ["-c", "apk add --no-cache nano curl && sleep infinity"]
+      args: ["-c", "apk add --no-cache nano curl make jq && sleep infinity"]
       securityContext:
-        runAsUser: 237827
         runAsGroup: 50036
       resources:
         limits:
