--- a/deployment/images/Dockerfile.nginx_kubectl
+++ b/deployment/images/Dockerfile.nginx_kubectl
@@ -8,4 +8,4 @@ RUN wget -O /usr/local/bin/kubectl https://dl.k8s.io/release/v1.28.0/bin/linux/a
 # Create directory for scripts
 RUN mkdir /scripts && chmod 755 /scripts
 
-# TEST
+# TEST 1
