--- a/ml-api/Dockerfile
+++ b/ml-api/Dockerfile
@@ -57,3 +57,6 @@ EXPOSE 8000
 
 # Start the FastAPI server
 CMD ["uvicorn", "ml_api.main:app", "--host", "0.0.0.0", "--port", "8000", "--log-level", "info"]
+
+
+# test
