--- a/k8s-autoscaler/pyproject.toml
+++ b/k8s-autoscaler/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+fastapi = "^0.115.3"
+httpx = "^0.27.2"
+uvicorn = "^0.32.0"
 
 
 [build-system]
